--- a/index.html
+++ b/index.html
@@ -84,33 +84,31 @@
         <div id = 'buttonsPanel'>
             <div id = 'numbers'>
                 <div class = 'row'>
-                    <!-- <input type="button" class = 'button' id = 'one' value="1"> -->
-
-                    <button class = 'button' id = 'one'>1</button>
-                    <button class = 'button' id = 'two'>2</button>
-                    <button class = 'button' id = 'three'>3</button>
+                    <button class = 'button number' id = 'one'>1</button>
+                    <button class = 'button number' id = 'two'>2</button>
+                    <button class = 'button number' id = 'three'>3</button>
                 </div>
                 <div class = 'row'>
-                    <button class = 'button' id = 'four'>4</button>
-                    <button class = 'button' id = 'five'>5</button>
-                    <button class = 'button' id = 'six'>6</button>
+                    <button class = 'button number' id = 'four'>4</button>
+                    <button class = 'button number' id = 'five'>5</button>
+                    <button class = 'button number' id = 'six'>6</button>
                 </div>
                 <div class = 'row'>
-                    <button class = 'button' id = 'seven'>7</button>
-                    <button class = 'button' id = 'eight'>8</button>
-                    <button class = 'button' id = 'nine'>9</button>
+                    <button class = 'button number' id = 'seven'>7</button>
+                    <button class = 'button number' id = 'eight'>8</button>
+                    <button class = 'button number' id = 'nine'>9</button>
                 </div>
                 <div class = 'row'>
                     <button class = 'button' id = 'clearButton'>C</button>
-                    <button class = 'button' id = 'zero'>0</button>
-                    <button class = 'button' id = 'fancyButton'>=</button>
+                    <button class = 'button number' id = 'zero'>0</button>
+                    <button class = 'button' id = 'resultButton'>=</button>
                 </div>               
             </div>
             <div id = 'operators'>
-                <button class = 'button' id = 'add'>+</button>
-                <button class = 'button' id = 'subtract'>-</button>
-                <button class = 'button' id = 'multiply'>*</button>
-                <button class = 'button' id = 'divide'>/</button>
+                <button class = 'button operator' id = 'add'>+</button>
+                <button class = 'button operator' id = 'subtract'>-</button>
+                <button class = 'button operator' id = 'multiply'>*</button>
+                <button class = 'button operator' id = 'divide'>/</button>
             </div>
         </div>
     </div>
